--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,3 +63,7 @@ nav:
   - Video Streaming: video-streaming.md
   - Other Equipment:
     - Accessories: accessories.md
+  - Show Notes:
+    - West Side Story:
+      - Audio: show-audio-wss.md
+      - Music: show-music-wss.md
